added some fonts and colors and some more styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,3 +24,12 @@ body {
 	/*position: absolute;*/
 	/*right: 50%;*/
 }
+
+/*
+font-family: 'Jura', sans-serif;
+font-family: 'VT323', monospace;
+font-family: 'Aldrich', sans-serif;
+font-family: 'Share Tech Mono', monospace;
+font-family: 'Barlow Semi Condensed', sans-serif;
+font-family: 'Righteous', cursive;
+*/
