--- a/client/src/pages/MemoryTilesPage/MemoryTilesPage.css
+++ b/client/src/pages/MemoryTilesPage/MemoryTilesPage.css
@@ -10,7 +10,7 @@
 }
 
 .grid {
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	background-color: #000000cf;
 	height: 410px;
 	width: 410px;
@@ -60,5 +60,14 @@
 #start, #submit {
 	margin: 0 auto;
 	background-color: #00c2ff;
-	border: solid blue 2px;
+	border: solid grey 0px;
+	font-family: 'Jura', sans-serif;
+}
+
+.col-6, .col-3 {
+	padding: 0px;
+}
+
+.col-6 {
+	/*max-width: 40%;*/
 }
