--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,6 @@
 body {
-	background: url("images/bg1080.jpg");
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: white;
+	background: url("images/bgstretched.jpg") no-repeat center center fixed;
+	background-size: contain;
 }
 
 @font-face {
