--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-	background: url("images/bg1080.jpg") no-repeat fixed;
+	background: url("images/bg1080.jpg") no-repeat center top fixed;
 	background-size: cover;
 	/*overflow: hidden;*/
 }
