--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,7 @@ body {
 	font-family: mexcellent;
 	font-size: 130px;
 	text-align: center;
+	text-shadow: 0 0 10px rgba(255, 255, 255, 0.48), 0 0 20px rgba(255, 255, 255, 0.46), 0 0 30px #e6f70075, 0 0 40px #e6f700, 0 0 70px #e6f700, 0 0 80px #e6f700, 0 0 100px #e6f700
 }
 
 /*
