--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,27 @@ body {
 	font-family: mexcellent;
 	font-size: 130px;
 	text-align: center;
-	text-shadow: 0 0 10px rgba(255, 255, 255, 0.48), 0 0 20px rgba(255, 255, 255, 0.46), 0 0 30px #e6f70075, 0 0 40px #e6f700, 0 0 70px #e6f700, 0 0 80px #e6f700, 0 0 100px #e6f700
+	text-shadow: 0 0 10px rgba(255, 255, 255, 0.48),
+		0 0 20px rgba(255, 255, 255, 0.46), 0 0 30px #e6f70075, 0 0 40px #e6f700,
+		0 0 70px #e6f700, 0 0 80px #e6f700, 0 0 100px #e6f700;
+}
+
+#bitgamesimage {
+	margin-top: 68px;
+	border: 2px #e6f700 solid;
+	height: 240px;
+	-webkit-box-shadow: 0px 0px 55px 5px rgba(255, 255, 0, 1);
+	-moz-box-shadow: 0px 0px 55px 5px rgba(255, 255, 0, 1);
+	box-shadow: 0px 0px 55px 5px rgba(255, 255, 0, 1);
+	-webkit-filter: grayscale(0) blur(0);
+	filter: grayscale(0) blur(0);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+#bitgamesimage:hover {
+	-webkit-filter: grayscale(100%) blur(3px);
+	filter: grayscale(100%) blur(3px);
 }
 
 /*
